164885124 chore(travis-ci): Integrate travis into project
 - Add .travis.yml file with travis configurations

[Starts #164885124]

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production",
     "test": "jest --watch",
-    "test:coverage": "jest --coverage --colors"
+    "coverage": "jest --coverage --colors"
   },
   "repository": {
     "type": "git",
