--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production",
-    "test": "jest --watch",
-    "coverage": "jest --coverage --colors"
+    "test": "jest -u --watch",
+    "coverage": "jest -u --coverage --colors"
   },
   "repository": {
     "type": "git",
@@ -37,7 +37,16 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-transform-runtime": "^7.4.0",
+    "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
     "react": "^16.8.5",
-    "react-dom": "^16.8.5"
+    "react-bootstrap": "^1.0.0-beta.6",
+    "react-dom": "^16.8.5",
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^5.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   }
 }
