--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/plugin-transform-runtime": "^7.4.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "jest-localstorage-mock": "^2.4.0",
     "react": "^16.8.5",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.5",
